--- a/index.html
+++ b/index.html
@@ -285,14 +285,14 @@
     <div class="hero">
         <div class="container">
             <img src="logo.png" alt="Logo" class="logo">
-            <h1>GGwithJW's FiveM Development</h1>
-            <p>18-year-old passionate FiveM developer crafting innovative solutions for roleplay servers.</p>
+            <h1>GGwithJW's Cfx.re Development</h1>
+            <p>18-year-old passionate developer crafting innovative resources for roleplay servers on FiveM.</p>
         </div>
     </div>
 
     <section id="projects" class="projects">
         <div class="container">
-            <h2 class="section-title">My Projects</h2>
+            <h2 class="section-title">Past Projects</h2>
             <div class="project-grid">
                 <!-- Project 1 -->
                 <div class="project-card">
