--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
                                 <img src="https://capestick.dev/logo.png" alt="Kyan" class="author-avatar">
                                 <div class="author-details">
                                     <p class="author-name">Kyan (@solo_capestick)</p>
-                                    <p class="author-title">Quantum Modifications</p>
+                                    <p class="author-title">Quantum Modifications & Lunar Network</p>
                                 </div>
                             </div>
                         </div>
