--- a/index.html
+++ b/index.html
@@ -550,9 +550,9 @@
         </div>
     </nav>
 
-    <a href="https://discord.gg/quantummodifications" class="store-banner">
+    <!--<a href="https://discord.gg/quantummodifications" class="store-banner">
         NEWS: CHECK OUT QUANTUM MODIFICATIONS FOR THE LATEST TMC RESOURCES
-    </a>
+    </a>-->
 
     <div class="hero">
         <div class="container">
@@ -570,14 +570,14 @@
                     <iframe class="project-video" src="https://www.youtube.com/embed/xQ4acRuyD6s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="project-info">
                         <h3>Dealer System - TMC Framework</h3>
-                        <p>Advanced dealer management system with real-time automatic drug sales and unique upgrades.</p>
+                        <p>Advanced dealer management system with real-time automatic drug sales and unique upgrades. This was made for Quantum Modifications and won't be sold anywhere else.</p>
                     </div>
                 </div>
                 <div class="project-card">
                     <iframe class="project-video" src="https://www.youtube.com/embed/Ku_kFifp6K4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="project-info">
                         <h3>Profile Hub - TMC Framework</h3>
-                        <p>Comprehensive client menu for players to easily view their character statistics as well as quick actions.</p>
+                        <p>Comprehensive client menu for players to easily view their character statistics as well as quick actions. This was made for Quantum Modifications and won't be sold anywhere else.</p>
                     </div>
                 </div>
             </div>
