--- a/index.html
+++ b/index.html
@@ -550,9 +550,9 @@
         </div>
     </nav>
 
-    <!--<a href="https://discord.gg/quantummodifications" class="store-banner">
-        NEWS: CHECK OUT QUANTUM MODIFICATIONS FOR THE LATEST TMC RESOURCES
-    </a>-->
+    <a href="https://discord.gg/ajmodifications" class="store-banner">
+        NEWS: CHECK OUT AJ MODIFICATIONS FOR THE LATEST TMC/QBX RESOURCES
+    </a>
 
     <div class="hero">
         <div class="container">
